--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -34,3 +34,8 @@ input[type=text] {
     width: 100px;
     display: block;
 }
+
+.todo-item {
+    display: flex;
+    justify-content: space-between;
+}
