--- a/src/components/todo/todo.css
+++ b/src/components/todo/todo.css
@@ -16,11 +16,11 @@
     margin-bottom: 20px;
 }
 
-input[type=text] {
-    height: 20px;
+/* input[type=text] {
+    height: 35px;
     border-radius: 5px;
     margin-right: 10px;
-}
+} */
 
 .todo-data {
     width: 100%;
